--- a/Final_Project.ipynb
+++ b/Final_Project.ipynb
@@ -16,6 +16,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 005 RL/DQL In Trading\n",
+    "\n",
+    "- Antonio Lomelí Ureña\n",
+    "- Carolina Martínez Escalante\n",
+    "- Enrique Tonatiuh Pérez Cortés Barba\n",
+    "\n",
+    "#### In this project, we explore the application of Deep Q-Learning (DQL) to the domain of algorithmic trading and portfolio management. Reinforcement Learning offers a powerful framework for training agents that learn to make sequential decisions through interaction with a dynamic environment. Unlike supervised learning, RL does not rely on labeled data but instead optimizes behavior through trial and error, guided by rewards and penalties."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -870,10 +883,13 @@
     "\n",
     "![image.png](attachment:image.png)\n",
     "\n",
+    "In the graph, it can be observed that although the DQN agent was able to execute buy, sell, and hold decisions consistently based on technical indicators, its final performance was slightly lower than that of a passive Buy & Hold strategy. This suggests that while the model did learn certain market patterns, it was not able to outperform the returns of simply holding the asset during the analyzed period. This may be due to possible overfitting of the model to the training set.\n",
+    "\n",
+    "\n",
     "\n",
     "PLOT OF REWARDS PER EPISODE:\n",
-    "\n",
-    "![image-2.png](attachment:image-2.png)"
+    "![image-2.png](attachment:image-2.png)\n",
+    "The rewards per episode graph shows the evolution of the DQN agent's performance during the training process, reflecting a general upward trend in accumulated rewards. This growth suggests that the agent was able to learn a decision-making policy based on market patterns, improving its performance over time. However, the presence of episodes with high variability and abrupt drops in rewards indicates that the agent still faced difficulties in maintaining consistent behavior across different market conditions. The overall improvement observed in rewards confirms that the agent successfully identified relevant structures within the data."
    ]
   },
   {
@@ -1028,6 +1044,21 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As a final step, the DQN agent was tested exclusively with data from the period of January to July 2025 in order to evaluate its ability to generalize to information not seen during training. The results show that the agent’s performance was stable and consistent, managing to outperform the passive Buy & Hold strategy. The portfolio’s evolution over time indicates that the model was able to adapt to market conditions.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "gtLnazlmVJ4D"
    },
@@ -1036,13 +1067,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "id": "wvcFPM4GVRjK"
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "This project successfully applied Deep Q-Learning (DQL) in algorithmic trading, demonstrating its ability to learn and adapt to dynamic and complex environments like financial markets. Unlike traditional rule-based approaches, DQL enables an intelligent agent to optimize buy, sell, or hold decisions through continuous interactions with the environment using reinforcement learning techniques. This is particularly useful in volatile markets, such as Bitcoin, where the model processes technical indicators (RSI, MACD, SMA) and adjusts its strategy in real-time to maximize cumulative rewards. Additionally, the implementation of a replay buffer and data normalization ensures that the agent learns from past experiences, improving its robustness against market non-stationarity and noise.\n",
+    "\n",
+    "The results obtained demonstrate that the DQN agent successfully executed buy, sell, and hold operations consistently based on technical indicators, learning market patterns that helped it make accurate decisions. However, the performance achieved fell short of expectations, failing to surpass the Buy and Hold strategy, suggesting this model could be enhanced to match or exceed that benchmark.\n",
+    "\n",
+    "On the other hand, the rewards-per-episode graph reveals an overall improvement trend in the agent's learning, showing it was able to identify relevant patterns in the data and optimize its decision-making policy over time. Nevertheless, the high variability observed in certain episodes, with abrupt drops in rewards, indicates the model still faces challenges in maintaining consistent behavior across different market conditions.\n"
+   ]
   },
   {
    "cell_type": "markdown",
