--- a/Final_Project.ipynb
+++ b/Final_Project.ipynb
@@ -1089,13 +1089,40 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "3JxYhC-uVYjW"
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Antonio Lomelí\n",
+    "\n",
+    "Esta clase fue una de las que más he disfrutado en lo que va de la carrera. En este curso realmente sentí un verdadero interés en el desarrollo de modelos aplicados, no solo desde el lado técnico, sino también por cómo estos pueden tener un impacto directo en decisiones de negocio reales. El curso logró un equilibrio muy valioso entre los fundamentos teóricos, la programación y el entendimiento del mercado, lo cual hizo que el aprendizaje fuera completo y significativo.\n",
+    "\n",
+    "Al trabajar en el proyecto, pude profundizar en cómo funciona el mercado a nivel microestructural y cómo estos detalles influyen directamente en las estrategias de trading. Tuve que analizar métricas, comprender la formación del precio y ver cómo las decisiones que toma un algoritmo afectan los resultados. Lo más valioso fue poder llevar todo esto a código, utilizando herramientas de Python que me permitieron convertir la teoría en un modelo funcional y ejecutable.\n",
+    "\n",
+    "Más allá del proyecto en sí, esta experiencia me ayudó a conectar los aprendizajes del curso con mis propios intereses como futuro ingeniero financiero. Reforcé mi capacidad para analizar problemas complejos, construir soluciones basadas en datos, y tomar decisiones más informadas y estructuradas. Me dio mayor seguridad para enfrentar el reto que implica operar en un entorno incierto como el mercado financiero, sabiendo que detrás de cada decisión hay una lógica sólida.\n",
+    "\n",
+    "En conclusión, el curso ofreció una integración clara entre el análisis técnico y su aplicación práctica en trading. Me permitió desarrollar habilidades relevantes para el entorno financiero actual y reafirmar la utilidad de los modelos cuantitativos como herramienta de apoyo en la toma de decisiones.\n",
+    "\n",
+    "\n",
+    "- Carolina Martínez\n",
+    "\n",
+    "Este proyecto representó una oportunidad valiosa para adentrarme con mayor profundidad en la lógica que rige el funcionamiento de los mercados financieros y su impacto en las decisiones de trading. A través del análisis, pude comprender mejor la dinámica del mercado y sus implicaciones prácticas. Lo más enriquecedor fue aplicar estos conocimientos en un entorno de programación, utilizando bibliotecas especializadas de Python para construir un modelo funcional que sintetiza los contenidos del curso.\n",
+    "\n",
+    "Una de las principales lecciones que me deja esta experiencia es la posibilidad real de implementar algoritmos que respondan a condiciones específicas del mercado. Aunque es evidente que ningún sistema garantiza resultados exitosos, el hecho de contar con una estructura metodológica bien fundamentada proporciona mayor confianza al momento de operar. La base teórica y el enfoque técnico desarrollado permiten tomar decisiones más informadas y menos intuitivas, lo cual es fundamental en un entorno tan cambiante y competitivo como el financiero.\n",
+    "\n",
+    "Además, este proyecto me ayudó a establecer vínculos claros entre los contenidos del curso y los conocimientos adquiridos a lo largo de la carrera. Pude identificar cómo distintas herramientas y conceptos que antes parecían aislados se integran para resolver problemas reales, lo que refuerza la utilidad de la formación académica. Ver cómo la teoría puede traducirse en aplicaciones concretas para la toma de decisiones en trading ha sido una experiencia satisfactoria.\n",
+    "\n",
+    "En resumen, el curso me proporcionó una visión más técnica, realista y completa de los mercados. Me permitió afianzar habilidades analíticas, mejorar mi capacidad de programación aplicada a las finanzas y reafirmar mi interés por seguir profundizando en el desarrollo de soluciones tecnológicas dentro del ámbito financiero.\n",
+    "\n",
+    "- Enrique Pérez Cortés\n",
+    "\n",
+    "Durante el desarrollo de este proyecto profundicé un poco más en el funcionamiento del mercado y como este se relaciona directamente con las decisiones que se toman al momento de hacer trading. Tuve que interpretar y utilizar diferentes métricas, entender cómo se formaba el precio y evaluar cómo las órdenes impactaban en mi resultado. Además, utilicé herramientas y bibliotecas especializadas de Python para conectar toda la teoría que aprendí con un producto más tangible, modelando y ejecutando un modelo desarrollado en base a lo aprendido.\n",
+    "\n",
+    "Este proyecto me ayudó a conectar los temas del curso con algunos de mis objetivos como ingeniero financiero, sobre todo en mi capacidad para analizar los problemas y construir algoritmos que me ayuden a solucionarlos, cosas que en el mundo de las finanzas son muy útiles. \n",
+    "\n",
+    "En términos generales, el curso me brindó una perspectiva más profunda y técnica sobre el funcionamiento real de los mercados financieros y entiendo cómo muchas cosas que he visto a lo largo de la carrera pueden servir para optimizar aspectos de la “vida” como el trading, aterrizo más todas estas ideas que he visto en la carrera hasta ahora.\n",
+    "\n",
+    "Finalizo el curso con una mayor confianza en mis habilidades técnicas y analíticas, así como con una motivación renovada para seguir especializándome en temas que integran la tecnología, los datos y las finanzas."
+   ]
   }
  ],
  "metadata": {
@@ -1117,9 +1144,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
